# omni_agent

./: README.md  curl_request.sh  main.py  pyproject.toml  stream_generator.py  utils.py
langgraph_scripts/: graph_nodes.py  graph_state.py  tools.py
langgraph_scripts/agents/: document_retriever.py
models/: embedding.py  llm.py
prompts/: generate_answer.yaml  orchestrator.yaml  rag_agent_classify_intent.yaml  rag_agent_generate_answer.yaml
retriever/: workers.py
templates/: index.html  main_window.html  upsert_docs.html
upsert_documents/: argparser.py  upsert_documents.py
