[project]
name = "omni-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.2.0",
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain>=1.0.4",
    "langchain-chroma>=0.1.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
]
